--- a/mystore/store/templates/store/base.html
+++ b/mystore/store/templates/store/base.html
@@ -43,18 +43,20 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
       <div class="form-inline my-2 my-lg-0">
-        <a href="login/" class="btn btn-warning px-2">Login</a>
-        <a href="logout/" class="btn btn-warning px-2">Logout</a>
+        {% if user.is_authenticated %}
+        <a href="logout/" class="btn btn-warning px-2">LogOut</a>
+        {% else %}
+        <a href="login/" class="btn btn-warning px-2">LogIn</a>
+        {% endif %}
         <a href="{% url 'cart' %}">
           <i class="fas fa-shopping-cart px-2"></i>
         </a>
+        {% if user.is_authenticated %}
         <p id="cart-total">{{cartItems}}</p>
+        {% else %}
+        <p id="cart-total">?</p>
+        {% endif %}
       </div>
     </div>
   </nav>
