--- a/wekart/base/templates/base/store.html
+++ b/wekart/base/templates/base/store.html
@@ -16,7 +16,7 @@
       >
         Add to Cart
       </button>
-      <a href="#" class="btn btn-outline-success">View Image</a>
+      <a href="{{product.imageURL}}" class="btn btn-outline-success">View Image</a>
       <h4 class="h4">${{product.price|floatformat:2}}</h4>
     </div>
   </div>
