--- a/wekart/base/templates/base/store.html
+++ b/wekart/base/templates/base/store.html
@@ -1,5 +1,8 @@
 {% extends 'base/base.html' %} 
-{% load static %} 
+{% load static %}
+{% block nav %}
+Store
+{% endblock %}
 {% block content %}
 
 <div class="row">
