--- a/wekart/base/templates/base/checkout.html
+++ b/wekart/base/templates/base/checkout.html
@@ -1,5 +1,8 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block nav %}
+Checkout
+{% endblock %}
 {% block content %}
 <div class="row">
   <div class="col-lg-6">
